add logo and horn images + add header and top sections html

--- a/index.html
+++ b/index.html
@@ -5,14 +5,46 @@
     <title></title>
   </head>
   <body>
-    <header>
-
+    <header class="page-header">
+      <div class="page-header__wrapper wrapper">
+        <div class="page-header__logo logo">
+          <img src="./image/logotype.png" alt="Company's logo" class="logo__img">
+          <b class="logo__text">Adviensa</b>
+        </div>
+        <nav class="main-nav">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item">
+              <a href="#">Über uns</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">Kontakt</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">FAQ</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="page-header__registration registration">
+          <a href="#" class="registration__link">Einloggen</a>
+          <button class="registration__btn btn btn--primary">Anmelden</button>
+        </div>
+      </div>
     </header>
-    <main>
-
+    <main class="page-main">
+      <section class="top">
+        <div class="top__wrapper wrapper">
+          <div class="top__logo logo">
+            <img src="./image/logotype.png" alt="Company's logo" class="logo__img">
+          </div>
+          <h1 class="top__title">Sieh die Werbung, die Du willst und verdiene noch Geld dazu!</h1>
+          <p class="top__text">Finde für Dich relevante Waren, Dienstleistungen und werde belohnt dafür.</p>
+          <button class="top__btn btn btn--secondary">Jetzt Anmelden</button>
+          <img src="./image/horn.png" alt="Image of a horn in a laptop" class="top__img">
+        </div>
+      </section>
     </main>
     <footer>
-      
+
     </footer>
   </body>
 </html>
