add images for how it work section + add how it work section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,28 @@
           <img src="./image/horn.png" alt="Image of a horn in a laptop" class="top__img">
         </div>
       </section>
+      <section class="how-it-work">
+        <div class="how-it-work__wrapper wrapper">
+          <h2 class="how-it-work__title section__title">Wie funktioniert <span>Adviensa?</span></h2>
+          <ul class="how-it-work__list steps-list">
+            <li class="steps-list__item">
+              <p class="steps-list__value">I</p>
+              <p class="steps-list__text">Schau Dir personalisierte Angebote an</p>
+              <img src="./image/funktioniert-1.png" alt="Get personalized offers" class="steps-list__img">
+            </li>
+            <li class="steps-list__item">
+              <p class="steps-list__value">II</p>
+              <p class="steps-list__text">Beantworte die Prüffragen</p>
+              <img src="./image/funktioniert-2.png" alt="Answer the questions" class="steps-list__img">
+            </li>
+            <li class="steps-list__item">
+              <p class="steps-list__value">III</p>
+              <p class="steps-list__text">Freue Dich über verdientes Geld!</p>
+              <img src="./image/funktioniert-1.png" alt="Rejoice in the money received" class="steps-list__img">
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer>
 
