--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       </div>
     </header>
     <main class="page-main">
-      <section class="top">
-        <div class="top__wrapper wrapper">
+      <div class="wrapper">
+        <section class="top">
           <div class="top__logo logo">
             <img src="./image/logotype.png" alt="Company's logo" class="logo__img">
           </div>
@@ -40,10 +40,8 @@
           <p class="top__text">Finde für Dich relevante Waren, Dienstleistungen und werde belohnt dafür.</p>
           <button class="top__btn btn btn--secondary">Jetzt Anmelden</button>
           <img src="./image/horn.png" alt="Image of a horn in a laptop" class="top__img">
-        </div>
-      </section>
-      <section class="how-it-work">
-        <div class="how-it-work__wrapper wrapper">
+        </section>
+        <section class="how-it-work">
           <h2 class="how-it-work__title section__title">Wie funktioniert <span>Adviensa?</span></h2>
           <ul class="how-it-work__list steps-list">
             <li class="steps-list__item">
@@ -62,8 +60,11 @@
               <img src="./image/funktioniert-1.png" alt="Rejoice in the money received" class="steps-list__img">
             </li>
           </ul>
-        </div>
-      </section>
+        </section>
+        <section class="advantages">
+          
+        </section>
+      </div>
     </main>
     <footer>
 
