add advantages images and html section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,21 @@
           </ul>
         </section>
         <section class="advantages">
-          
+          <h2 class="advantages__title  section__title">Deine <span>Vorteile<span></h2>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <p class="advantages__text">Bei Adviensa  kannst Du ohne großen Aufwand nebenbei Geld verdienen</p>
+              <img src="./image/advantages-1.png" alt="Earn effortlessly" class="advantages__img">
+            </li>
+            <li class="advantages__item">
+              <p class="advantages__text">Waren und Dienstleistungen entdecken, welche genua für Dich relevant sind.</p>
+              <img src="./image/advantages-2.png" alt="Identification of individual goods and services" class="advantages__img advantages__img--left">
+            </li>
+            <li class="advantages__item">
+              <p class="advantages__text">Dein gesammeltes Geld in Bar auszahlen lassen</p>
+              <img src="./image/advantages-3.png" alt="Cashing money" class="advantages__img">
+            </li>
+          </ul>
         </section>
       </div>
     </main>
