add images and reviews section

--- a/index.html
+++ b/index.html
@@ -78,6 +78,38 @@
             </li>
           </ul>
         </section>
+        <section class="reviews">
+          <h2 class="reviews__title section__title">Was sagen unsere Kunden <span>Kunden<span></h2>
+          <div class="reviews__slider slider">
+            <input type="radio" id="slider-btn-1" name="toggle">
+            <input type="radio" id="slider-btn-2" name="toggle" checked>
+            <input type="radio" id="slider-btn-3" name="toggle">
+            <div class="slider__controls">
+              <label for="slider-btn-1" class="slider__btn">
+                <img src="" alt="Monster1" class="slider__img">
+              </label>
+              <label for="slider-btn-2" class="slider__btn">
+                <img src="" alt="Monster2" class="slider__img">
+              </label>
+              <label for="slider-btn-3" class="slider__btn">
+                <img src="" alt="Monster3" class="slider__img">
+              </label>
+            </div>
+            <div class="slider__inner">
+              <div class="slider__area">
+                <div class="slide__item">
+                  <p class="slide__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+                <div class="slide__item">
+                  <p class="slide__text">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                </div>
+                <div class="slide__item">
+                  <p class="slide__text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
     <footer>
