fixed review section

--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
             <input type="radio" id="slider-btn-3" name="toggle">
             <div class="slider__controls">
               <label for="slider-btn-1" class="slider__btn">
-                <img src="" alt="Monster1" class="slider__img">
+                <img src="./image/reviews-monster-1.png" alt="Monster1" class="slider__img">
               </label>
               <label for="slider-btn-2" class="slider__btn">
-                <img src="" alt="Monster2" class="slider__img">
+                <img src="./image/reviews-monster-2.png" alt="Monster2" class="slider__img">
               </label>
               <label for="slider-btn-3" class="slider__btn">
-                <img src="" alt="Monster3" class="slider__img">
+                <img src="./image/reviews-monster-3.png" alt="Monster3" class="slider__img">
               </label>
             </div>
             <div class="slider__inner">
