add mission section and fixed section-tittle class

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <img src="./image/horn.png" alt="Image of a horn in a laptop" class="top__img">
         </section>
         <section class="how-it-work">
-          <h2 class="how-it-work__title section__title">Wie funktioniert <span>Adviensa?</span></h2>
+          <h2 class="how-it-work__title section-title">Wie funktioniert <span>Adviensa?</span></h2>
           <ul class="how-it-work__list steps-list">
             <li class="steps-list__item">
               <p class="steps-list__value">I</p>
@@ -62,7 +62,7 @@
           </ul>
         </section>
         <section class="advantages">
-          <h2 class="advantages__title  section__title">Deine <span>Vorteile<span></h2>
+          <h2 class="advantages__title  section-title">Deine <span>Vorteile<span></h2>
           <ul class="advantages__list">
             <li class="advantages__item">
               <p class="advantages__text">Bei Adviensa  kannst Du ohne großen Aufwand nebenbei Geld verdienen</p>
@@ -79,7 +79,7 @@
           </ul>
         </section>
         <section class="reviews">
-          <h2 class="reviews__title section__title">Was sagen unsere Kunden <span>Kunden<span></h2>
+          <h2 class="reviews__title section-title">Was sagen unsere Kunden <span>Kunden<span></h2>
           <div class="reviews__slider slider">
             <input type="radio" id="slider-btn-1" name="toggle">
             <input type="radio" id="slider-btn-2" name="toggle" checked>
@@ -109,6 +109,10 @@
               </div>
             </div>
           </div>
+        </section>
+        <section class="mission">
+          <h2 class="mission__title section-title">Unsere <span>Mission<span></h2>
+          <p class="mission__text">Unsere Mission ist, die Erfahrung davon, wie die Werbung empfangen wird, zu verbessern, die Werbung für die Anbieter attraktiver zu machen und Anbieter mit ihren relevanten Kunden zusammenzubringen.</p>
         </section>
       </div>
     </main>
