add footer html

--- a/index.html
+++ b/index.html
@@ -116,8 +116,42 @@
         </section>
       </div>
     </main>
-    <footer>
-
+    <footer class="page-footer">
+      <div class="page-footer__logo logo">
+        <img src="./image/logotype.png" alt="Company's logo" class="logo__img">
+        <b class="logo__text">Adviensa</b>
+      </div>
+      <div class="page-footer__nav">
+        <b class="page-footer__title">Sitemap</b>
+        <ul class="page-footer__list site-list">
+          <li class="site-list__item">
+            <a href="#">Über uns</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">FAQ</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Kontakt</a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__nav">
+        <b class="page-footer__title">Legal</b>
+        <ul class="page-footer__list site-list">
+          <li class="site-list__item">
+            <a href="#">AGB</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Datenschutz</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Cookie</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Impressum</a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
