--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="page-header">
       <div class="page-header__wrapper wrapper">
         <div class="page-header__logo logo">
-          <img src="./image/logotype.png" alt="Company's logo" class="logo__img">
+          <img src="./image/logotype.png" alt="Company's logo" class="logo__img logo__img--header">
           <b class="logo__text">Adviensa</b>
         </div>
         <nav class="main-nav">
@@ -35,7 +35,7 @@
       <div class="wrapper">
         <section class="top">
           <div class="top__logo logo">
-            <img src="./image/logotype.png" alt="Company's logo" class="logo__img">
+            <img src="./image/logotype.png" alt="Company's logo" class="logo__img logo__img--large">
           </div>
           <h1 class="top__title">Sieh die Werbung, die Du willst und verdiene noch Geld dazu!</h1>
           <p class="top__text">Finde für Dich relevante Waren, Dienstleistungen und werde belohnt dafür.</p>
@@ -120,8 +120,8 @@
     <footer class="page-footer">
       <div class="wrapper">
         <div class="page-footer__logo logo">
-          <img src="./image/logotype.png" alt="Company's logo" class="logo__img">
-          <b class="logo__text">Adviensa</b>
+          <img src="./image/logotype.png" alt="Company's logo" class="logo__img logo__img--footer">
+          <b class="logo__text logo__text--column">Adviensa</b>
         </div>
         <div class="page-footer__nav">
           <b class="page-footer__title">Sitemap</b>
