fixed top background

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <main class="page-main">
       <div class="wrapper">
         <section class="top">
-          <img src="./image/header-bg-desktop.jpg" alt="Man like superman" class="top__background">
+          <div class="top__background">
+            <img src="./image/header-bg-desktop.jpg" alt="Man like superman" class="top__background-img">
+          </div>
           <div class="top__logo logo">
             <img src="./image/logotype.png" alt="Company's logo" class="logo__img logo__img--large">
           </div>
