--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="de" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <title>Adviensa</title>
+    <meta name="description" content="Site description for SEO">
     <link rel="stylesheet" href="./styles/main.css">
   </head>
   <body>
