--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <section class="top">
           <div class="top__background">
             <picture>
-              <source media="(max-width: 916px)" srcset="./image/header-bg-mobile.jpg">
-              <img src="./image/header-bg-desktop.jpg" alt="Man like superman" class="top__background-img">
+              <source media="(max-width: 1025px)" srcset="./image/header-bg-mobile.png">
+              <img src="./image/header-bg-desktop.png" alt="Man like superman" class="top__background-img">
             </picture>
           </div>
           <div class="top__logo logo">
@@ -97,7 +97,7 @@
               <div class="advantages__left">
                 <p class="advantages__text">Dein gesammeltes Geld in Bar auszahlen lassen</p>
               </div>
-              <div class="advantages__right">
+              <div class="advantages__right advantages__right--top">
                 <img src="./image/advantages-3.png" alt="Cashing money" class="advantages__img advantages__img--right">
               </div>
             </li>
